--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,351 +1,378 @@
 :root {
-    --bg-gradient-onyx: linear-gradient(
-      to bottom right, 
-      hsl(240, 1%, 25%) 3%, 
-      hsl(0, 0%, 19%) 97%
-    );
-    --bg-gradient-jet: linear-gradient(
-      to bottom right, 
-      hsla(240, 1%, 18%, 0.251) 0%, 
-      hsla(240, 2%, 11%, 0) 100%
-    ), hsl(240, 2%, 13%);
-    --bg-gradient-yellow-1: linear-gradient(
-      to bottom right, 
-      hsl(45, 100%, 71%) 0%, 
-      hsla(36, 100%, 69%, 0) 50%
-    );
-    --bg-gradient-yellow-2: linear-gradient(
-      135deg, 
-      hsla(45, 100%, 71%, 0.251) 0%, 
-      hsla(35, 100%, 68%, 0) 59.86%
-    ), hsl(240, 2%, 13%);
-    --border-gradient-onyx: linear-gradient(
-      to bottom right, 
-      hsl(0, 0%, 25%) 0%, 
-      hsla(0, 0%, 25%, 0) 50%
-    );
-    --text-gradient-yellow: linear-gradient(
-      to right, 
-      hsl(45, 100%, 72%), 
-      hsl(35, 100%, 68%)
-    );
-  
-    --jet: hsl(0, 0%, 22%);
-    --onyx: hsl(240, 1%, 17%);
-    --eerie-black-1: hsl(240, 2%, 13%);
-    --eerie-black-2: hsl(240, 2%, 12%);
-    --smoky-black: hsl(0, 0%, 7%);
-    --white-1: hsl(0, 0%, 100%);
-    --white-2: hsl(0, 0%, 98%);
-    --orange-yellow-crayola: hsl(45, 100%, 72%);
-    --vegas-gold: hsl(45, 54%, 58%);
-    --light-gray: hsl(0, 0%, 84%);
-    --light-gray-70: hsla(0, 0%, 84%, 0.7);
-    --bittersweet-shimmer: hsl(0, 43%, 51%);
-  
-    --ff-poppins: 'Poppins', sans-serif;
-  
-    /* font-size */
-    --fs-1: 24px;
-    --fs-2: 18px;
-    --fs-3: 17px;
-    --fs-4: 16px;
-    --fs-5: 15px;
-    --fs-6: 14px;
-    --fs-7: 13px;
-    --fs-8: 11px;
-  
-    /* font-weight */
-    --fw-300: 300;
-    --fw-400: 400;
-    --fw-500: 500;
-    --fw-600: 600;
-  
-    /**
+	/**
+     * colors
+     */
+
+	/* gradient */
+
+	--bg-gradient-onyx: linear-gradient(
+		to bottom right,
+		hsl(240, 1%, 25%) 3%,
+		hsl(0, 0%, 19%) 97%
+	);
+	--bg-gradient-jet: linear-gradient(
+			to bottom right,
+			hsla(240, 1%, 18%, 0.251) 0%,
+			hsla(240, 2%, 11%, 0) 100%
+		),
+		hsl(240, 2%, 13%);
+	--bg-gradient-yellow-1: linear-gradient(
+		to bottom right,
+		hsl(45, 100%, 71%) 0%,
+		hsla(36, 100%, 69%, 0) 50%
+	);
+	--bg-gradient-yellow-2: linear-gradient(
+			135deg,
+			hsla(45, 100%, 71%, 0.251) 0%,
+			hsla(35, 100%, 68%, 0) 59.86%
+		),
+		hsl(240, 2%, 13%);
+	--border-gradient-onyx: linear-gradient(
+		to bottom right,
+		hsl(0, 0%, 25%) 0%,
+		hsla(0, 0%, 25%, 0) 50%
+	);
+	--text-gradient-yellow: linear-gradient(
+		to bottom,
+		hsl(45, 100%, 72%),
+		hsl(30, 99%, 52%)
+	);
+
+	/* solid */
+
+	--jet: hsl(0, 0%, 22%);
+	--onyx: hsl(240, 1%, 17%);
+	--eerie-black-1: hsl(240, 2%, 13%);
+	--eerie-black-2: hsl(240, 2%, 12%);
+	--smoky-black: hsl(0, 0%, 7%);
+	--white-1: hsl(0, 0%, 100%);
+	--white-2: hsl(0, 0%, 98%);
+	--orange-yellow-crayola: hsl(45, 100%, 72%);
+	--vegas-gold: hsl(45, 54%, 58%);
+	--light-gray: hsl(0, 0%, 84%);
+	--light-gray-70: hsla(0, 0%, 84%, 0.7);
+	--bittersweet-shimmer: hsl(0, 43%, 51%);
+    --green:#90EE90;
+
+	/**
+     * typography
+     */
+
+	/* font-family */
+	--ff-poppins: "Poppins", sans-serif;
+	--ff-pressstart: "Press Start 2P", cursive;
+
+	/* font-size */
+	--fs-1: 24px;
+	--fs-2: 18px;
+	--fs-3: 17px;
+	--fs-4: 16px;
+	--fs-5: 15px;
+	--fs-6: 14px;
+	--fs-7: 13px;
+	--fs-8: 11px;
+
+	/* font-weight */
+	--fw-300: 300;
+	--fw-400: 400;
+	--fw-500: 500;
+	--fw-600: 600;
+
+	/**
      * shadow
      */
-    
-    --shadow-1: -4px 8px 24px hsla(0, 0%, 0%, 0.25);
-    --shadow-2: 0 16px 30px hsla(0, 0%, 0%, 0.25);
-    --shadow-3: 0 16px 40px hsla(0, 0%, 0%, 0.25);
-    --shadow-4: 0 25px 50px hsla(0, 0%, 0%, 0.15);
-    --shadow-5: 0 24px 80px hsla(0, 0%, 0%, 0.25);
-  
-    /**
+
+	--shadow-1: -4px 8px 24px hsla(0, 0%, 0%, 0.25);
+	--shadow-2: 0 16px 30px hsla(0, 0%, 0%, 0.25);
+	--shadow-3: 0 16px 40px hsla(0, 0%, 0%, 0.25);
+	--shadow-4: 0 25px 50px hsla(0, 0%, 0%, 0.15);
+	--shadow-5: 0 24px 80px hsla(0, 0%, 0%, 0.25);
+
+	/**
      * transition
      */
-  
-    --transition-1: 0.25s ease;
-    --transition-2: 0.5s ease-in-out;
-  
-  }
-  .sidebar,
-  article {
-    background: var(--eerie-black-2);
-    border: 1px solid var(--jet);
-    border-radius: 20px;
-    padding: 15px;
-    box-shadow: var(--shadow-1);
-    z-index: 1;
-  }
-  
-  .separator {
-    width: 100%;
-    height: 1px;
-    background: var(--jet);
-    margin: 16px 0;
-  }
-  
-  .icon-box {
-    position: relative;
-    background: var(--border-gradient-onyx);
-    width: 30px;
-    height: 30px;
-    border-radius: 8px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 16px;
-    color: var(--orange-yellow-crayola);
-    box-shadow: var(--shadow-1);
-    z-index: 1;
-  }
-  
-  .icon-box::before {
-    content: "";
-    position: absolute;
-    inset: 1px;
-    background: var(--eerie-black-1);
-    border-radius: inherit;
-    z-index: -1;
-  }
-  
-  .icon-box ion-icon { --ionicon-stroke-width: 35px; }
-  
-  article { display: none; }
-  
-  article.active {
-    display: block;
-    animation: fade 0.5s ease backwards;
-  }
-  
-  @keyframes fade {
-    0% { opacity: 0; }
-    100% { opacity: 1; }
-  }
-  
-  .h2,
-  .h3,
-  .h4,
-  .h5 {
-    color: var(--white-2);
-    text-transform: capitalize;
-  }
-  
-  .h2 { font-size: var(--fs-1); }
-  
-  .h3 { font-size: var(--fs-2); }
-  
-  .h4 { font-size: var(--fs-4); }
-  
-  .h5 {
-    font-size: var(--fs-7);
-    font-weight: var(--fw-500);
-  }
-  
-  .article-title {
-    position: relative;
-    padding-bottom: 7px;
-  }
-  
-  .article-title::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 30px;
-    height: 3px;
-    background: var(--text-gradient-yellow);
-    border-radius: 3px;
-  }
-  
-  .has-scrollbar::-webkit-scrollbar {
-    width: 5px; /* for vertical scrollbar */
-    height: 5px; /* for horizontal scrollbar */
-  }
-  
-  .has-scrollbar::-webkit-scrollbar-track {
-    background: var(--onyx);
-    border-radius: 5px;
-  }
-  
-  .has-scrollbar::-webkit-scrollbar-thumb {
-    background: var(--orange-yellow-crayola);
-    border-radius: 5px;
-  }
-  
-  .has-scrollbar::-webkit-scrollbar-button { width: 20px; }
-  
-  .content-card {
-    position: relative;
-    background: var(--border-gradient-onyx);
-    padding: 15px;
-    padding-top: 45px;
-    border-radius: 14px;
-    box-shadow: var(--shadow-2);
-    cursor: pointer;
-    z-index: 1;
-  }
-  
-  .content-card::before {
-    content: "";
-    position: absolute;
-    inset: 1px;
-    background: var(--bg-gradient-jet);
-    border-radius: inherit;
-    z-index: -1;
-  }
-  
-  
-  /*-----------------------------------*\
-    #MAIN
+
+	--transition-1: 0.25s ease;
+	--transition-2: 0.5s ease-in-out;
+}
+
+body {
+	background-color: var(--onyx);
+	color: white;
+	font-family: var(--ff-pressstart);
+}
+
+/*-----------------------------------*\
+  #REUSED STYLE
   \*-----------------------------------*/
-  
-  main {
-    margin: 15px 12px;
-    margin-bottom: 75px;
-    min-width: 259px;
-  }
-  
-
-  .sidebar {
-  margin-bottom: 15px;
-  max-height: 112px;
-  overflow: hidden;
-  transition: var(--transition-2);
+img,
+a,
+button,
+time {
+	display: block;
 }
 
-.sidebar.active { max-height: 405px; }
-
-.sidebar-info {
-  position: relative;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  gap: 15px;
+p {
+	word-wrap: break-word;
+	line-height: 1.5rem;
+    font-size: 0.8rem;
 }
 
-.avatar-box {
-  background: var(--bg-gradient-onyx);
-  border-radius: 20px;
+.separator {
+	width: 100%;
+	height: 1px;
+	background: var(--jet);
+	margin: 16px 0;
 }
 
-.info-content .name {
-  color: var(--white-2);
-  font-size: var(--fs-3);
-  font-weight: var(--fw-500);
-  letter-spacing: -0.25px;
-  margin-bottom: 10px;
+.section-container {
+	border: 1px darkgray solid;
+	border-radius: 15px;
+	padding: 30px;
+    background-color: black;
 }
 
-.info-content .title {
-  color: var(--white-1);
-  background: var(--onyx);
-  font-size: var(--fs-8);
-  font-weight: var(--fw-300);
-  width: max-content;
-  padding: 3px 12px;
-  border-radius: 8px;
+h1 {
+	text-align: center;
+	margin: 10% auto;
+	background: var(--text-gradient-yellow);
+	-webkit-background-clip: text;
+	background-clip: none;
+	-webkit-text-fill-color: transparent;
+    font-size: 3rem;
 }
 
-.info_more-btn {
-  position: absolute;
-  top: -15px;
-  right: -15px;
-  border-radius: 0 15px;
-  font-size: 13px;
-  color: var(--orange-yellow-crayola);
-  background: var(--border-gradient-onyx);
-  padding: 10px;
-  box-shadow: var(--shadow-2);
-  transition: var(--transition-1);
-  z-index: 1;
+h2 {
+    font-size: 2rem;
 }
 
-.info_more-btn::before {
-  content: "";
-  position: absolute;
-  inset: 1px;
-  border-radius: inherit;
-  background: var(--bg-gradient-jet);
-  transition: var(--transition-1);
-  z-index: -1;
+h3 {
+    font-size: 1.5rem;
 }
 
-.info_more-btn:hover,
-.info_more-btn:focus { background: var(--bg-gradient-yellow-1); }
-
-.info_more-btn:hover::before,
-.info_more-btn:focus::before { background: var(--bg-gradient-yellow-2); }
-
-.info_more-btn span { display: none; }
-
-.sidebar-info_more {
-  opacity: 0;
-  visibility: hidden;
-  transition: var(--transition-2);
+ul {
+	list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
-.sidebar.active .sidebar-info_more {
-  opacity: 1;
-  visibility: visible;
+.large-icon {
+	display: inline;
 }
 
-.contacts-list {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 16px;
+.small-icon {
+	width: 30px;
+	height: 30px;
+	border-radius: 8px;
+	text-align: center;
+	font-size: 16px;
+	color: var(--orange-yellow-crayola);
+	display: inline;
+	padding-right: 10px;
+}
+
+/* side-bar */
+
+.sidebar {
+    border: 1px darkgray solid;
+	border-radius: 15px;
+	padding-top: 100px;
+    padding-left: auto;
+}
+
+.sidebar-top {
+	text-align: center;
+	font-family: var(--ff-poppins);
+}
+
+.sidebar-bottom {
+	font-family: var(--ff-poppins);
+	text-align: left;
+	padding-left: 10px;
+}
+
+.avatar {
+	background: var(--bg-gradient-onyx);
+	border-radius: 20px;
+	max-width: max-content;
+	max-height: max-content;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.avatar img {
+	width: 150px;
+}
+
+.title {
+	background: var(--bg-gradient-onyx);
+	border-radius: 5px;
+	height: 30px;
+	width: 200px;
+	font-size: 12px;
+	margin: 20px auto;
+    margin-bottom: 30px;
+}
+
+.contact-items {
+	margin: 30px auto;
+    text-align: center;
 }
 
 .contact-item {
-  min-width: 100%;
-  display: flex;
-  align-items: center;
-  gap: 16px;
+	margin: 20px auto;
+	font-size: 12px;
+    text-align: left;
 }
-
-.contact-info {
-  max-width: calc(100% - 46px);
-  width: calc(100% - 46px);
-}
-
-.contact-title {
-  color: var(--light-gray-70);
-  font-size: var(--fs-8);
-  text-transform: uppercase;
-  margin-bottom: 2px;
-}
-
-.contact-info :is(.contact-link, time, address) {
-  color: var(--white-2);
-  font-size: var(--fs-7);
-}
-
-.contact-info address { font-style: normal; }
 
 .social-list {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  gap: 15px;
-  padding-bottom: 4px;
-  padding-left: 7px;
+	align-items: center;
+	display: flex;
+	gap: 20px;
+	margin: auto;
+    width: fit-content;
 }
 
 .social-item .social-link {
-  color: var(--light-gray-70);
-  font-size: 18px;
+	color: var(--light-gray-70);
+	font-size: 18px;
+}
+
+.social-item .social-link:hover {
+	color: var(--light-gray);
+}
+
+/* Main Container */
+.main-container {
+	background-color: black;
+    margin-left: 3%;
+}
+
+.database-container {
+	background-color: var(--onyx);
+	margin-top: 30px;
+	padding: 1px;
+	border: solid 1px white;
+	border-radius: 10px;
+}
+
+.database {
+	background-color: var(--green);
+	margin: 30px;
+	padding: 40px;
+	color: black;
+	border: solid 1px white;
+	border-radius: 10px;
+}
+
+.database-intro-text {
+	display: inline;
+}
+
+.database-intro-line {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.database-main {
+    margin-top: 15px;
+    font-size: 12px;
+    font-weight: lighter;
+    line-height: 2;
+}
+
+/* Main Buttons */
+
+.main-buttons {
+    margin: auto;
+    padding-bottom: 20px;
+    text-align: center;
+}
+
+/* Game Section */
+.game {
+    margin-top: 30px;
+}
+
+.status-container{
+    margin-left: 3%;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    text-align: center;
 }
 
 
-.social-item .social-link:hover { color: var(--light-gray); }
+
+.random-question {
+    background-color: white;
+    height: 180px;
+    width: 100%;
+    margin-bottom: 30px;
+    border: 1px solid grey;
+    border-radius: 10px;
+    text-align: left;
+}
+
+.question-prompt, .question {
+    font-size: 10px;
+    color: black;
+    margin: 0;
+    padding: 0;
+}
+
+.answer {
+    color: var(--bittersweet-shimmer);
+    font-size: 10px;
+    margin: 0;
+    margin-top: 8px;
+    padding: 0;
+}
+
+.keyboard-line {
+    display: inline;
+}
+
+/* footer */
+footer {
+    margin-top: 100px;
+    margin-bottom: 50px;
+    font-size: 10px;
+    text-align: center;
+}
+
+@media screen and (max-width: 992px) {
+    .avatar {
+        margin-top: 5%;
+    }
+
+    .main-container {
+        margin-top: 5%;
+        margin-left: 0;
+    }
+
+    .sidebar {
+        padding-top: 20px;
+    }
+
+    .contact-item {
+        text-align: center;
+    }
+
+    .status-container {
+        margin-left: 0;
+        margin-top: 30px;
+    }
+
+    .keyboard {
+        padding-top: 0;
+    }
+
+    .database-intro-text {
+        margin-top: 3%;
+    }
+
+    .col-10{
+        padding-left: 5%;
+    }
+}
+
