--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -52,7 +52,7 @@
 	--light-gray: hsl(0, 0%, 84%);
 	--light-gray-70: hsla(0, 0%, 84%, 0.7);
 	--bittersweet-shimmer: hsl(0, 43%, 51%);
-    --green:#90EE90;
+	--green: #90ee90;
 
 	/**
      * typography
@@ -115,7 +115,7 @@ time {
 p {
 	word-wrap: break-word;
 	line-height: 1.5rem;
-    font-size: 0.8rem;
+	font-size: 0.8rem;
 }
 
 .separator {
@@ -129,7 +129,7 @@ p {
 	border: 1px darkgray solid;
 	border-radius: 15px;
 	padding: 30px;
-    background-color: black;
+	background-color: black;
 }
 
 h1 {
@@ -139,21 +139,21 @@ h1 {
 	-webkit-background-clip: text;
 	background-clip: none;
 	-webkit-text-fill-color: transparent;
-    font-size: 3rem;
+	font-size: 3rem;
 }
 
 h2 {
-    font-size: 2rem;
+	font-size: 2rem;
 }
 
 h3 {
-    font-size: 1.5rem;
+	font-size: 1.5rem;
 }
 
 ul {
 	list-style-type: none;
-    margin: 0;
-    padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
 .large-icon {
@@ -174,10 +174,10 @@ ul {
 /* side-bar */
 
 .sidebar {
-    border: 1px darkgray solid;
+	border: 1px darkgray solid;
 	border-radius: 15px;
 	padding-top: 100px;
-    padding-left: auto;
+	padding-left: auto;
 }
 
 .sidebar-top {
@@ -211,18 +211,18 @@ ul {
 	width: 200px;
 	font-size: 12px;
 	margin: 20px auto;
-    margin-bottom: 30px;
+	margin-bottom: 30px;
 }
 
 .contact-items {
 	margin: 30px auto;
-    text-align: center;
+	text-align: center;
 }
 
 .contact-item {
 	margin: 20px auto;
 	font-size: 12px;
-    text-align: left;
+	text-align: left;
 }
 
 .social-list {
@@ -230,7 +230,7 @@ ul {
 	display: flex;
 	gap: 20px;
 	margin: auto;
-    width: fit-content;
+	width: fit-content;
 }
 
 .social-item .social-link {
@@ -245,7 +245,7 @@ ul {
 /* Main Container */
 .main-container {
 	background-color: black;
-    margin-left: 3%;
+	margin-left: 3%;
 }
 
 .database-container {
@@ -270,150 +270,151 @@ ul {
 }
 
 .database-intro-line {
-    margin-top: 0;
-    margin-bottom: 0;
+	margin-top: 0;
+	margin-bottom: 0;
 }
 
 .database-main {
-    margin-top: 15px;
-    font-size: 12px;
-    font-weight: lighter;
-    line-height: 2;
+	margin-top: 15px;
+	font-size: 12px;
+	font-weight: lighter;
+	line-height: 2;
 }
 
 /* Main Buttons */
 
 .main-buttons {
-    margin: auto;
-    padding-bottom: 20px;
-    text-align: center;
+	margin: auto;
+	padding-bottom: 20px;
+	text-align: center;
+	padding-top: 20px;
 }
 
 /* Game Section */
 .game {
-    margin-top: 30px;
+	margin-top: 30px;
 }
 
-.status-container{
-    margin-left: 3%;
-    padding-top: 50px;
-    padding-bottom: 50px;
-    text-align: center;
+.status-container {
+	margin-left: 3%;
+	padding-top: 50px;
+	padding-bottom: 50px;
+	text-align: center;
 }
-
-
 
 .random-question {
-    background-color: white;
-    height: 180px;
-    width: 100%;
-    margin-bottom: 30px;
-    border: 1px solid grey;
-    border-radius: 10px;
-    text-align: left;
+	background-color: white;
+	height: 180px;
+	width: 100%;
+	margin-bottom: 30px;
+	border: 1px solid grey;
+	border-radius: 10px;
+	text-align: left;
 }
 
-.question-prompt, .question {
-    font-size: 10px;
-    color: black;
-    margin: 0;
-    padding: 0;
+.question-prompt,
+.question {
+	font-size: 10px;
+	color: black;
+	margin: 0;
+	padding: 0;
 }
 
 .answer {
-    color: var(--bittersweet-shimmer);
-    font-size: 10px;
-    margin: 0;
-    margin-top: 8px;
-    padding: 0;
+	color: var(--bittersweet-shimmer);
+	font-size: 10px;
+	margin: 0;
+	margin-top: 8px;
+	padding: 0;
 }
 
 .keyboard-line {
-    display: inline;
+	display: inline;
 }
 
 /* footer */
 footer {
-    margin-top: 100px;
-    margin-bottom: 50px;
-    padding-left: 20px;
-    padding-right: 20px;
-    font-size: 10px;
-    text-align: center;
+	margin-top: 100px;
+	margin-bottom: 50px;
+	padding-left: 20px;
+	padding-right: 20px;
+	font-size: 10px;
+	text-align: center;
 }
 
 @media screen and (max-width: 992px) {
-    .avatar {
-        margin-top: 5%;
-    }
+	.avatar {
+		margin-top: 5%;
+	}
 
-    .main-container {
-        margin-top: 5%;
-        margin-left: 0;
-    }
+	.main-container {
+		margin-top: 5%;
+		margin-left: 0;
+	}
 
-    .sidebar {
-        padding-top: 20px;
-    }
+	.sidebar {
+		padding-top: 20px;
+	}
 
-    .contact-item {
-        text-align: center;
-    }
+	.contact-item {
+		text-align: center;
+	}
 
-    .status-container {
-        margin-left: 0;
-        margin-top: 30px;
-    }
+	.status-container {
+		margin-left: 0;
+		margin-top: 30px;
+	}
 
-    .keyboard {
-        padding-top: 0;
-    }
+	.keyboard {
+		padding-top: 0;
+	}
 
-    .database-intro-text {
-        margin-top: 3%;
-    }
+	.database-intro-text {
+		margin-top: 3%;
+	}
 
-    .col-10{
-        padding-left: 5%;
-    }
+	.col-10 {
+		padding-left: 5%;
+	}
 }
 
 @media (max-width: 576px) {
-    h1 {
-        font-size: 1.5rem;
-    }
+	h1 {
+		font-size: 1.5rem;
+	}
 
-    h2 {
-        font-size: 1rem;
-    }
+	h2 {
+		font-size: 1rem;
+	}
 
-    h3 {
-        font-size: 0.8rem;
-        line-height: 1.5;
-    }
+	h3 {
+		font-size: 0.8rem;
+		line-height: 1.5;
+	}
 
-    p {
-        font-size: 0.5rem;
-    }
+	p {
+		font-size: 0.5rem;
+	}
 
-    .database-container {
-        margin-top: 30px;
-        padding: 1px;
-    }
-    
-    .database {
-        margin: 10px;
-        padding: 20px;
-       
-    }
+	.database-container {
+		margin-top: 30px;
+		padding: 1px;
+	}
 
-    .wizard-icon {
-        margin-top: 10px;
-    }
+	.database {
+		margin: 10px;
+		padding: 20px;
+	}
 
-    .col-sm-10 {
-        padding-top: 10px;
-    }
+	.wizard-icon {
+		margin-top: 10px;
+	}
 
+	.col-sm-10 {
+		padding-top: 10px;
+	}
+
+	.main-buttons button{
+		margin: 10px;
+	}
 }
-
