--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -156,6 +156,11 @@ ul {
 	padding: 0;
 }
 
+ol > li {
+    margin: 20px;
+
+}
+
 .large-icon {
 	display: inline;
 }
@@ -215,7 +220,7 @@ ul {
 }
 
 .contact-items {
-	margin: 30px auto;
+	margin: 30px 0;
 	text-align: center;
 }
 
@@ -392,7 +397,7 @@ footer {
 		line-height: 1.5;
 	}
 
-	p {
+	p, li {
 		font-size: 0.5rem;
 	}
 
