--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,11 +1,4 @@
-
 :root {
-	/**
-	 * colors
-	 */
-
-	/* gradient */
-
 	--bg-gradient-onyx: linear-gradient(
 		to bottom right,
 		hsl(240, 1%, 25%) 3%,
@@ -140,11 +133,6 @@ textarea {
 	font: inherit;
 }
 
-::selection {
-	background: var(--orange-yellow-crayola);
-	color: var(--smoky-black);
-}
-
 :focus {
 	outline-color: var(--orange-yellow-crayola);
 }
@@ -199,10 +187,6 @@ article {
 }
 
 article {
-	display: none;
-}
-
-article.active {
 	display: block;
 	animation: fade 0.5s ease backwards;
 }
@@ -214,6 +198,11 @@ article.active {
 	100% {
 		opacity: 1;
 	}
+}
+
+@keyframes scaleUp {
+	0% { transform: scale(0.8); }
+	100% { transform: scale(1); }
 }
 
 .h2,
@@ -257,179 +246,15 @@ article.active {
 	border-radius: 3px;
 }
 
-.has-scrollbar::-webkit-scrollbar {
-	width: 5px; /* for vertical scrollbar */
-	height: 5px; /* for horizontal scrollbar */
-}
-
-.has-scrollbar::-webkit-scrollbar-track {
-	background: var(--onyx);
-	border-radius: 5px;
-}
-
-.has-scrollbar::-webkit-scrollbar-thumb {
-	background: var(--orange-yellow-crayola);
-	border-radius: 5px;
-}
-
-.has-scrollbar::-webkit-scrollbar-button {
-	width: 20px;
-}
-
-.content-card {
-	position: relative;
-	background: var(--border-gradient-onyx);
-	padding: 15px;
-	padding-top: 45px;
-	border-radius: 14px;
-	box-shadow: var(--shadow-2);
-	cursor: pointer;
-	z-index: 1;
-}
-
-.content-card::before {
-	content: "";
-	position: absolute;
-	inset: 1px;
-	background: var(--bg-gradient-jet);
-	border-radius: inherit;
-	z-index: -1;
-}
-
-
-
-/*-----------------------------------*\
-	#RESUME
-  \*-----------------------------------*/
-
 .article-title {
 	margin-bottom: 30px;
 }
 
-/**
-   * education and experience 
-   */
-
-.timeline {
-	margin-bottom: 30px;
+.sidebar,
+article {
+	width: auto;
 }
 
-.timeline .title-wrapper {
-	display: flex;
-	align-items: center;
-	gap: 15px;
-	margin-bottom: 25px;
-}
-
-.timeline-list {
-	font-size: var(--fs-6);
-	margin-left: 45px;
-}
-
-.timeline-item {
-	position: relative;
-}
-
-.timeline-item:not(:last-child) {
-	margin-bottom: 20px;
-}
-
-.timeline-item-title {
-	font-size: var(--fs-6);
-	line-height: 1.3;
-	margin-bottom: 7px;
-}
-
-.timeline-list span {
-	color: var(--vegas-gold);
-	font-weight: var(--fw-400);
-	line-height: 1.6;
-}
-
-.timeline-item:not(:last-child)::before {
-	content: "";
-	position: absolute;
-	top: -25px;
-	left: -30px;
-	width: 1px;
-	height: calc(100% + 50px);
-	background: var(--jet);
-}
-
-.timeline-item::after {
-	content: "";
-	position: absolute;
-	top: 5px;
-	left: -33px;
-	height: 6px;
-	width: 6px;
-	background: var(--text-gradient-yellow);
-	border-radius: 50%;
-	box-shadow: 0 0 0 4px var(--jet);
-}
-
-.timeline-text {
-	color: var(--light-gray);
-	font-weight: var(--fw-300);
-	line-height: 1.6;
-}
-
-@keyframes scaleUp {
-	0% {
-		transform: scale(0.5);
-	}
-	100% {
-		transform: scale(1);
-	}
-}
-
-body::-webkit-scrollbar { width: 20px; }
-
-  body::-webkit-scrollbar-track { background: var(--smoky-black); }
-
-  body::-webkit-scrollbar-thumb {
-    border: 5px solid var(--smoky-black);
-    background: hsla(0, 0%, 100%, 0.1);
-    border-radius: 20px;
-    box-shadow: inset 1px 1px 0 hsla(0, 0%, 100%, 0.11),
-                inset -1px -1px 0 hsla(0, 0%, 100%, 0.11);
-  }
-
-  body::-webkit-scrollbar-thumb:hover { background: hsla(0, 0%, 100%, 0.15); }
-
-  body::-webkit-scrollbar-button { height: 60px; }
-
-
-
-  /**
-   * REUSED STYLE
-   */
-
-  .sidebar, article { width: auto; }
-
-  article { min-height: 100%; }
-
-
-body::-webkit-scrollbar {
-	width: 20px;
-}
-
-body::-webkit-scrollbar-track {
-	background: var(--smoky-black);
-}
-
-body::-webkit-scrollbar-thumb {
-	border: 5px solid var(--smoky-black);
-	background: hsla(0, 0%, 100%, 0.1);
-	border-radius: 20px;
-	box-shadow: inset 1px 1px 0 hsla(0, 0%, 100%, 0.11),
-		inset -1px -1px 0 hsla(0, 0%, 100%, 0.11);
-}
-
-body::-webkit-scrollbar-thumb:hover {
-	background: hsla(0, 0%, 100%, 0.15);
-}
-
-body::-webkit-scrollbar-button {
-	height: 60px;
+article {
+	min-height: 100%;
 }
